# FusionFiber

./: .gitignore  README.md  config.yaml  pyproject.toml
_output/: _debug.txt  _log.txt
data/: ahdts.py  diameter_nozzle_fiber_experiment.py
modelling/nozzlefiber/: 1_batch_flux_variables_nozzle.txt  2_batch_heat_variables_nozzle.txt  3_batch_flux_rotated30deg_variables_nozzle.txt  Optie1_05_A3_DTS_v5.txt  flexpde_batch_nozzle.py  md1.pde  md1_debug.txt  md1_initialmesh.xfr  md1_log.txt  md2.pde  md2.pde.bak  md2_debug.txt  md2_initialmesh.xfr  md2_log.txt  md3.pde  md3.pde.bak  md3_debug.txt  md3_initialmesh.xfr  md3_log.txt  md4.pde  md4.pde.bak  md4_debug.txt  md4_initialmesh.xfr  md4_log.txt  md5.pde  md5_debug.txt  md5_initialmesh.xfr  md5_log.txt  md6.pde  md6.pde.bak  md6_debug.txt  md6_initialmesh.xfr  md6_log.txt  md7.pde  md7_debug.txt  md7_initialmesh.xfr  md7_log.txt  md8.pde  md8.pde.bak  md8_debug.txt  (+9 more)
modelling/nozzlefiber/_output/: _debug.txt  _log.txt
modelling/nozzlefiber/head_optie1_output/: head_optie1.pde
