[project]
authors = [{name = "roelanddeheld", email = "roelandnieboer@gmail.com"}]
dependencies = []
name = "FusionFiber"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.3.3,<3"
numpy = ">=2.3.3,<3"
xmltodict = ">=1.0.2,<2"
yaml = ">=0.2.5,<0.3"
pyyaml = ">=6.0.3,<7"
